grammar.js
        source_file: $ => choice(
            field('forms_only', repeat($._form)),
            field('exprs', repeat(seq($._expr, optional("."))))
        ),

        // -------------------------------------------------------------

        _form: $ => choice(
            $.module_attribute,
            $.behaviour_attribute,
            $.export_attribute,
            $.import_attribute,
            $.import_record_attribute,
            $.export_type_attribute,
            $.export_record_attribute,
            $.optional_callbacks_attribute,
            $.compile_options_attribute,
            $.feature_attribute,
            $.file_attribute,
            $.deprecated_attribute,
            $.record_decl,
            $.type_alias,
            $.nominal,
            $.opaque,
            $.spec,
            $.callback,
            $.wild_attribute,
            $.fun_decl,
            // preprocessor, not an OTP abstract form
            $._preprocessor_directive,
            // Used for Structural Search Replace definitions
            $.ssr_definition,
            // skip escript shebang
            $.shebang,
        ),

        export_attribute: $ => seq(
            '-',
            atom_const('export'),
            '(',
            '[',
            sepBy(optional(','), field("funs", $.fa)),
            ']',
            ')',
            '.'
        ),

        fa: $ => seq(field("fun", $._name), field("arity", $.arity)),

        type_alias: $ => seq('-', atom_const('type'), $._type_def, '.'),

        _type_def: $ => choice(
            seq(field("name", $.type_name), '::', field("ty", $._expr)),
            seq('(', field("name", $.type_name), '::', field("ty", $._expr), ')')
        ),
        type_name: $ => seq(field("name", $._name), field("args", $.var_args)),

        spec: $ => seq('-', atom_const('spec'), $._spec_def, '.'),

        _spec_def: $ => choice(
            seq($._spec_fun, sepBy1(';', field("sigs", $.type_sig))),
            seq('(', $._spec_fun, sepBy1(';', field("sigs", $.type_sig)), ')'),
        ),

        module: $ => seq(field("name", $._name), ':'),

        fun_decl: $ => prec.right(seq(
            field("clause", $._function_or_macro_clause),
            optional($._fun_clause_separator),
        )),
        _fun_clause_separator: $ => choice(
            ';',
            '.',
        ),

        type_sig: $ => seq(
            field("args", $.expr_args),
            '->',
            field("ty", $._expr),
            optional(field("guard", $.type_guards)),
        ),

        pipe: $ => prec.right(PREC.PIPE, seq(field("lhs", $._expr), '|', field("rhs", $._expr))),

        _function_or_macro_clause: $ => choice(
            $.function_clause,
            $.macro_call_expr,
        ),

        function_clause: $ => seq(
            field("name", $._name),
            field("args", $.expr_args),
            optional($._clause_guard),
            field("body", $.clause_body)
        ),

        // This is optional, but tree-sitter complains if we put
        // 'optional' here, must put it at each usage site.
        _clause_guard: $ => seq('when', field("guard", $.guard)),

        clause_body: $ => prec.right(seq('->', sepBy1(',', field("exprs", $._expr)))),

        _expr: $ => choice(
            $.ann_type,
            $.pipe,
            $.dotdotdot,
            $.range_type,
            $.catch_expr,
            $.binary_op_expr,
            $.match_expr,
            $.unary_op_expr,
            $._map_expr,
            $.call,
            $._record_expr,
            $.remote,
            $._expr_max,
            $.cond_match_expr,
        ),

        remote: $ => prec.right(PREC.REMOTE, seq(field("module", $.remote_module), field("fun", $._expr))),
        remote_module: $ => prec(PREC.REMOTE, seq(field("module", $._expr), ':')),

        paren_expr: $ => seq('(', field("expr", $._expr), ')'),
        record_index_expr: $ => seq(
            field("name", $.record_name),
            field("field", $.record_field_name),
        ),

        record_name: $ => seq('#', field("name", $._name)),

        record_field_name: $ => seq('.', field("name", $._name)),

        // Native record support (OTP 29)
        call: $ => prec(PREC.CALL, seq(
            field("expr", $._expr),
            field("args", $.expr_args),
        )),

        _name: $ => choice(
            $.atom,
            $.var,
            alias($.macro_call_none, $.macro_call_expr),
        ),

        arity: $ => seq('/', field("value", $._arity_value)),

        _arity_value: $ => choice(
            $.integer,
            $.var,
            $.macro_call_expr,
        ),

        expr_args: $ => seq(
            '(',
            sepBy(',', field("args", $._expr)),
            ')',
        ),

        var_args: $ => seq(
            '(',
            sepBy(optional(','), field("args", $.var)),
            ')'
        ),

      string: $ => choice(
        $._sq_string,
        $._tq_string,
        $._tq_sigil_string,
        $._sigil_verbatim_string,
        $._sigil_string,
      ),

        // -------------------------------------------------------------
        // Tokens

        var: $ => token(/[_A-Z\xC0-\xD6\xD8-\xDE][_@a-zA-Z0-9\xC0-\xD6\xD8-\xDE\xDF-\xF6\xF8-\xFF]*/),

        integer: $ => token(choice(
          /\d(_?\d)*#[0-9a-zA-Z](_?[0-9a-zA-Z])*/,
          /\d(_?\d)*/,
        )),

        _sq_string: $ => token(seq(
            /"/,
            sq_string_q_base,
            /"/
        )),

        // Verbatim means do not process escape chars
        _sigil_verbatim_string: $ => token(make_verbatim_sigil_string(/~[BS]/)),

        // Processes string escapes (quoted)
        _sigil_string: $ => token(make_quoted_sigil_string(/~[bs]?/)),

        // Check via https://regexr.com/
        // Should match https://www.erlang.org/doc/reference_manual/data_types.html#escape-sequences
        // Regex is based on https://github.com/erlang/otp/blob/30e0b342a50ce70b204a47e1e442e3dc33f9a41b/lib/stdlib/src/erl_scan.erl#L874-L922
        atom: $ => token(
            /([a-z\xDF-\xF6\xF8-\xFF][_@a-zA-Z0-9\xC0-\xD6\xD8-\xDE\xDF-\xF6\xF8-\xFF]*)|('([^'\\]|\\([^x\^]|[0-7]{1,3}|x[0-9a-fA-F]{2}|x\{[0-9a-fA-F]+\}|\^.))*')/,
        ),

        comment: $ => token(/%[^\n]*/),
    }
});
