test/corpus/strings.txt
================================================================================
triple quoted string
================================================================================

f() -> """
       hello
       there
       """.

--------------------------------------------------------------------------------

(source_file
  (fun_decl
    (function_clause
      (atom)
      (expr_args)
      (clause_body
        (string)))))
